--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "express-session": "^1.14.2",
+    "fs-extra": "^1.0.0",
+    "imagemin": "^5.2.2",
+    "imagemin-mozjpeg": "^6.0.0",
+    "imagemin-pngquant": "^5.0.0",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sharp": "^0.16.2"
   }
 }
