--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "connect-busboy": "0.0.2",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
+    "cookie-session": "^2.0.0-beta.1",
     "debug": "~2.2.0",
+    "dotenv": "^4.0.0",
     "express": "~4.13.4",
     "express-session": "^1.14.2",
     "fs-extra": "^1.0.0",
